VQ-1815:Ability to select Payment Mode

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -639,7 +639,51 @@
       "none": "无",
       "auto_generate_cert": "自动生成证书",
       "installment_payment_pct": "分期付款百分比",
-      "installment_period": "分期付款期限"
+      "installment_period": "分期付款期限",
+      "payment_date": "付款日期",
+      "payment_frequency": "付款频率",
+      "holding_company": "控股公司",
+      "other_interested_parties": "其他利益相关方",
+      "installment_date": "分期付款日期",
+      "premium_financier": "保费融资人",
+      "payment_plan": "付款计划",
+      "policy_generated": "在系统外生成的保单",
+      "old_policy_no": "旧保单号",
+      "old_agent_no": "旧代理人号",
+      "reference_no": "参考号",
+      "import_risks": "导入风险",
+      "another_policy": "来自另一个保单",
+      "from_csv": "从CSV文件导入",
+      "select_file": "选择要上传的文件",
+      "choose_file": "选择文件",
+      "policy_no": "保单号",
+      "annually": "每年",
+      "semi_annually": "半年一次",
+      "quarterly": "每季度",
+      "monthly": "每月",
+      "one_off": "一次性",
+      "others": "其他",
+      "risk_location": "风险地点",
+      "risk_town": "风险城镇",
+      "risk_address": "风险地址",
+      "survey_risk": "调查风险",
+      "survey_date": "调查日期",
+      "compute_maximum_exposure": "计算最大暴露",
+      "max_exposure_amount": "最大暴露金额",
+      "territory": "领土",
+      "new_risk": "新风险",
+      "eml_top_location_level": "EML/顶层位置级别",
+      "rsk": "RSK",
+      "sec": "SEC",
+      "period_rates": "期间费率",
+      "prorata": "按比例分配",
+      "short_period_rates": "短期费率",
+      "full": "全额",
+      "retroactive_cover": "追溯性保险",
+      "maintenance_cover": "维护保险",
+      "quake_flood_zone": "地震/洪水区",
+      "relational_group": "关系组",
+      "risk_class": "风险等级"
     }
   },
   "lms": {
