--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -639,7 +639,51 @@
       "none": "Keiner",
       "auto_generate_cert": "Zertifikat automatisch generieren",
       "installment_payment_pct": "Ratenzahlungsprozentsatz",
-      "installment_period": "Ratenzahlungszeitraum"
+      "installment_period": "Ratenzahlungszeitraum",
+      "payment_date": "Zahlungsdatum",
+      "payment_frequency": "Zahlungsfrequenz",
+      "holding_company": "Muttergesellschaft",
+      "other_interested_parties": "Andere interessierte Parteien",
+      "installment_date": "Ratenzahlungsdatum",
+      "premium_financier": "Prämienfinanzierer",
+      "payment_plan": "Zahlungsplan",
+      "policy_generated": "Außerhalb des Systems generierte Police",
+      "old_policy_no": "Alte Policennummer",
+      "old_agent_no": "Alte Vertreternummer",
+      "reference_no": "Referenznummer",
+      "import_risks": "Risiken importieren",
+      "another_policy": "Aus einer anderen Police",
+      "from_csv": "Aus einer CSV-Datei",
+      "select_file": "Datei auswählen",
+      "choose_file": "Datei wählen",
+      "policy_no": "Police-Nr.",
+      "annually": "Jährlich",
+      "semi_annually": "Halbjährlich",
+      "quarterly": "Vierteljährlich",
+      "monthly": "Monatlich",
+      "one_off": "Einmalig",
+      "others": "Andere",
+      "risk_location": "Risikostandort",
+      "risk_town": "Risikostadt",
+      "risk_address": "Risikoadresse",
+      "survey_risk": "Risikoerhebung",
+      "survey_date": "Erhebungsdatum",
+      "compute_maximum_exposure": "Maximale Exposition berechnen",
+      "max_exposure_amount": "Maximale Expositionsgröße",
+      "territory": "Gebiet",
+      "new_risk": "Neues Risiko",
+      "eml_top_location_level": "EML/Top-Standortniveau",
+      "rsk": "RSK",
+      "sec": "SEC",
+      "period_rates": "Periodenraten",
+      "prorata": "Pro-Rata",
+      "short_period_rates": "Kurzzeit-Prämienraten",
+      "full": "Voll",
+      "retroactive_cover": "Rückwirkende Deckung",
+      "maintenance_cover": "Wartungsdeckung",
+      "quake_flood_zone": "Erdbeben-/Überschwemmungszone",
+      "relational_group": "Relationale Gruppe",
+      "risk_class": "Risikoklasse"
     }
   },
   "lms": {
