--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -639,7 +639,51 @@
       "none": "Ninguno",
       "auto_generate_cert": "Generar certificado automáticamente",
       "installment_payment_pct": "Porcentaje de pago a plazos",
-      "installment_period": "Período de pago a plazos"
+      "installment_period": "Período de pago a plazos",
+      "payment_date": "Fecha de pago",
+      "payment_frequency": "Frecuencia de pago",
+      "holding_company": "Empresa matriz",
+      "other_interested_parties": "Otras partes interesadas",
+      "installment_date": "Fecha de cuota",
+      "premium_financier": "Financiador de primas",
+      "payment_plan": "Plan de pago",
+      "policy_generated": "Póliza generada fuera del sistema",
+      "old_policy_no": "Número de póliza antigua",
+      "old_agent_no": "Número de agente antiguo",
+      "reference_no": "Número de referencia",
+      "import_risks": "Importar riesgos",
+      "another_policy": "De otra póliza",
+      "from_csv": "Desde un archivo CSV",
+      "select_file": "Seleccionar archivo",
+      "choose_file": "Elegir archivo",
+      "policy_no": "Número de póliza",
+      "annually": "Anualmente",
+      "semi_annually": "Semestralmente",
+      "quarterly": "Trimestralmente",
+      "monthly": "Mensualmente",
+      "one_off": "Único",
+      "others": "Otros",
+      "risk_location": "Ubicación del riesgo",
+      "risk_town": "Pueblo de riesgo",
+      "risk_address": "Dirección del riesgo",
+      "survey_risk": "Riesgo de encuesta",
+      "survey_date": "Fecha de encuesta",
+      "compute_maximum_exposure": "Calcular exposición máxima",
+      "max_exposure_amount": "Cantidad máxima de exposición",
+      "territory": "Territorio",
+      "new_risk": "Nuevo riesgo",
+      "eml_top_location_level": "Nivel de ubicación superior de EML",
+      "rsk": "RSK",
+      "sec": "SEC",
+      "period_rates": "Tasas periódicas",
+      "prorata": "Prorrateo",
+      "short_period_rates": "Tasas de período corto",
+      "full": "Completo",
+      "retroactive_cover": "Cobertura retroactiva",
+      "maintenance_cover": "Cobertura de mantenimiento",
+      "quake_flood_zone": "Zona de terremoto/inundación",
+      "relational_group": "Grupo relacional",
+      "risk_class": "Clase de riesgo"
     }
   },
   "lms": {
