--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -639,7 +639,51 @@
       "none": "Aucun",
       "auto_generate_cert": "Générer automatiquement un certificat",
       "installment_payment_pct": "Pourcentage de paiement échelonné",
-      "installment_period": "Période d'échelonnement du paiement"
+      "installment_period": "Période d'échelonnement du paiement",
+      "payment_date": "Date de paiement",
+      "payment_frequency": "Fréquence de paiement",
+      "holding_company": "Société mère",
+      "other_interested_parties": "Autres parties intéressées",
+      "installment_date": "Date de versement",
+      "premium_financier": "Financeur de prime",
+      "payment_plan": "Plan de paiement",
+      "policy_generated": "Police générée en dehors du système",
+      "old_policy_no": "Ancien numéro de police",
+      "old_agent_no": "Ancien numéro d'agent",
+      "reference_no": "Numéro de référence",
+      "import_risks": "Importer des risques",
+      "another_policy": "D'une autre police",
+      "from_csv": "À partir d'un fichier CSV",
+      "select_file": "Sélectionner un fichier",
+      "choose_file": "Choisir un fichier",
+      "policy_no": "Numéro de police",
+      "annually": "Annuellement",
+      "semi_annually": "Semi-annuellement",
+      "quarterly": "Trimestriellement",
+      "monthly": "Mensuellement",
+      "one_off": "Occasionnel",
+      "others": "Autres",
+      "risk_location": "Emplacement du risque",
+      "risk_town": "Ville à risque",
+      "risk_address": "Adresse du risque",
+      "survey_risk": "Évaluation du risque",
+      "survey_date": "Date de l'évaluation",
+      "compute_maximum_exposure": "Calcul de l'exposition maximale",
+      "max_exposure_amount": "Montant d'exposition maximal",
+      "territory": "Territoire",
+      "new_risk": "Nouveau risque",
+      "eml_top_location_level": "Niveau de localisation supérieur d'EML",
+      "rsk": "RSK",
+      "sec": "SEC",
+      "period_rates": "Taux périodiques",
+      "prorata": "Pro rata",
+      "short_period_rates": "Taux de courte période",
+      "full": "Complet",
+      "retroactive_cover": "Couverture rétroactive",
+      "maintenance_cover": "Couverture de maintenance",
+      "quake_flood_zone": "Zone de tremblement de terre/inondation",
+      "relational_group": "Groupe relationnel",
+      "risk_class": "Classe de risque"
     }
   },
   "lms": {
