--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -639,7 +639,50 @@
       "none": "Hakuna",
       "auto_generate_cert": "Kuzalisha Cheti Kiotomatiki",
       "installment_payment_pct": "Asilimia ya Malipo ya Kisasa",
-      "installment_period": "Kipindi cha Malipo ya Kisasa"
+      "payment_date": "Tarehe ya Malipo",
+      "payment_frequency": "Marudio ya Malipo",
+      "holding_company": "Kampuni Mzazi",
+      "other_interested_parties": "Washiriki Wengine Wanaohusika",
+      "installment_date": "Tarehe ya Kufunga",
+      "premium_financier": "Mnufaika wa Malipo ya Kifurushi",
+      "payment_plan": "Mpango wa Malipo",
+      "policy_generated": "Sera Iliyotengenezwa Nje ya Mfumo",
+      "old_policy_no": "Nambari ya Zamani ya Sera",
+      "old_agent_no": "Nambari ya Zamani ya Mwakilishi",
+      "reference_no": "Nambari ya Kumbukumbu",
+      "import_risks": "Kuleta Hatari",
+      "another_policy": "Kutoka Sera Nyingine",
+      "from_csv": "Kutoka kwa Faili ya CSV",
+      "select_file": "Chagua Faili",
+      "choose_file": "Chagua Faili",
+      "policy_no": "Nambari ya Sera",
+      "annually": "Kila Mwaka",
+      "semi_annually": "Nusu Mwaka",
+      "quarterly": "Kila Robo",
+      "monthly": "Kila Mwezi",
+      "one_off": "Mara Moja",
+      "others": "Nyingine",
+      "risk_location": "Mahali pa Hatari",
+      "risk_town": "Jiji la Hatari",
+      "risk_address": "Anwani ya Hatari",
+      "survey_risk": "Utafiti wa Hatari",
+      "survey_date": "Tarehe ya Utafiti",
+      "compute_maximum_exposure": "Hesabu Ufunuo Mkuu",
+      "max_exposure_amount": "Kiasi cha Ufunuo Mkuu",
+      "territory": "Eneo",
+      "new_risk": "Hatari Mpya",
+      "eml_top_location_level": "EML/Sehemu ya Juu ya Eneo",
+      "rsk": "RSK",
+      "sec": "SEC",
+      "period_rates": "Viwango vya Muda",
+      "prorata": "Prorata",
+      "short_period_rates": "Viwango vya Muda Mfupi",
+      "full": "Kamili",
+      "retroactive_cover": "Fidia ya Kurudi Nyuma",
+      "maintenance_cover": "Fidia ya Matengenezo",
+      "quake_flood_zone": "Eneo la Tetemeko la Ardhi/Mafuriko",
+      "relational_group": "Kikundi cha Uhusiano",
+      "risk_class": "Daraja la Hatari"
     }
   },
   "lms": {
